--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <html><head><title>This is the new page title</title></head>
-<body><h1>This is a header</h1><p>This is a paragraph</p></body></html>
+	<body><h1>This is a header</h1><p>This is a paragraph</p>Go to <a href="index2.html">index 2</a>.</body></html>
