--- a/index2.html
+++ b/index2.html
@@ -1,2 +1,2 @@
 <html><head><title>Index 2</title></head>
-<body>Welcome from Index 2. Go back to <a href="index.html">index</a>.</body></html>
+	<body>Welcome from Index 2. Go back to <a href="index.html">index</a>. Or try <a href="sample">Markdown sample </a></body></html>
